--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Brian Cooper",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bluebird": "^3.4.6",
+    "fs-extra": "^1.0.0",
+    "geolib": "^2.0.22",
+    "minimist": "^1.2.0",
+    "moment": "^2.15.2"
+  }
 }
