--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.6",
+    "dist-exiftool": "^10.53.0",
     "fs-extra": "^1.0.0",
     "geolib": "^2.0.22",
     "minimist": "^1.2.0",
-    "moment": "^2.15.2"
+    "moment": "^2.15.2",
+    "node-exiftool": "^2.3.0"
   }
 }
