--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dist-exiftool": "^10.53.0",
     "fs-extra": "^1.0.0",
     "geolib": "^2.0.22",
+    "mkdirp": "^0.5.1",
     "moment": "^2.15.2",
-    "node-exiftool": "^2.3.0"
+    "node-exiftool": "^2.3.0",
+    "request-promise-native": "^1.0.5"
   }
 }
